# brother

./: .env.example  .gitignore  00-SETUP.md  LICENSE  README.md  SECURITY.md  STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: ACHIEVEMENTS.md  ARCHITECTURE.md  GAME_SYSTEMS.md  INSTALLATION.md  METRICS.md  PRODUCT_DECISIONS.md  ROADMAP.md  SYNC_STRATEGY.md
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: routes.tsx  store.ts
src/db/: schema.sql
src/db/repositories/: finance.repository.ts  metricSnapshot.repository.ts  session.repository.ts  xpLedger.repository.ts
src/docs/: SECURITY_REVIEW.md  TECH_DEBT.md
src/domain/achievements/: achievement.schemas.ts  achievement.service.ts  achievement.types.ts  achievementCatalog.ts  achievementProgress.service.ts  achievementSeriesCatalog.ts
src/domain/challenges/: challenge.types.ts
src/domain/duel/: duel.types.ts
src/domain/finances/: finance.schemas.ts  finance.service.ts  finance.types.ts
src/domain/game/: gamePipeline.service.ts
src/domain/metrics/: metric.types.ts  metricDefinitions.ts  metricSnapshot.service.ts
src/domain/monthlyMissions/: monthlyMission.service.ts  monthlyMission.types.ts
src/domain/progress/: progress.schemas.ts  progress.service.ts  progress.types.ts  progressEvent.schemas.ts
src/domain/scoring/: scoring.types.ts
src/domain/sessions/: session.schemas.ts  session.service.ts  session.types.ts
src/domain/sync/: sync.types.ts
(+68 files in other folders)
