[package]
name = "personal_progress_game_lib"
version = "0.1.0"
description = "Personal Progress Game Tauri backend"
authors = ["you"]
edition = "2021"

[lib]
name = "personal_progress_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "personal_progress_game"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
